--- a/index.html
+++ b/index.html
@@ -10,119 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #0F172A;
-            overflow-x: hidden;
-        }
-        .orbitron {
-            font-family: 'Orbitron', monospace;
-        }
-        .hero-bg {
-            background: linear-gradient(135deg, #0F172A 0%, #1E293B 50%, #334155 100%);
-            position: relative;
-        }
-        .glow {
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.3);
-        }
-        .glow-purple {
-            box-shadow: 0 0 20px rgba(139, 92, 246, 0.3);
-        }
-        .text-glow {
-            text-shadow: 0 0 10px rgba(6, 182, 212, 0.5);
-        }
-        .card-hover {
-            transition: all 0.3s ease;
-        }
-        .card-hover:hover {
-            transform: translateY(-10px) rotateX(5deg);
-            box-shadow: 0 20px 40px rgba(6, 182, 212, 0.2);
-        }
-        .particle-bg {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 0;
-        }
-        .content-overlay {
-            position: relative;
-            z-index: 10;
-        }
-        .battle-arena {
-            background: url('resources/hero-battle-arena.png') center/cover;
-            position: relative;
-        }
-        .battle-arena::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(15, 23, 42, 0.7);
-        }
-        .nav-blur {
-            backdrop-filter: blur(10px);
-            background: rgba(15, 23, 42, 0.8);
-        }
-        .skill-icon {
-            width: 60px;
-            height: 60px;
-            background: linear-gradient(135deg, #06B6D4, #8B5CF6);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
-            animation: pulse 2s infinite;
-        }
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-        }
-        .type-badge {
-            background: linear-gradient(135deg, #06B6D4, #0891B2);
-            color: white;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-        }
-        .battle-button {
-            background: linear-gradient(135deg, #F97316, #EA580C);
-            color: white;
-            border: none;
-            padding: 16px 32px;
-            border-radius: 12px;
-            font-weight: 700;
-            font-size: 18px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-        .battle-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(249, 115, 22, 0.3);
-        }
-        .battle-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-            transition: left 0.5s;
-        }
-        .battle-button:hover::before {
-            left: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body class="bg-slate-900 text-white">
     <!-- 粒子背景 -->
@@ -140,7 +28,7 @@
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-cyan-400 hover:text-cyan-300 transition-colors font-medium">首页</a>
-                    <a href="battle.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
+                    <a href="battle-optimized.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
                     <a href="pokedex.html" class="text-white hover:text-cyan-300 transition-colors font-medium">宝可梦图鉴</a>
                     <a href="trainer.html" class="text-white hover:text-cyan-300 transition-colors font-medium">训练师档案</a>
                 </div>
@@ -169,7 +57,7 @@
                         体验最真实的宝可梦对战模拟器，掌握属性相克，组建最强战队，成为顶尖训练师！
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
-                        <button class="battle-button" onclick="window.location.href='battle.html'">
+                        <button class="battle-button" onclick="window.location.href='battle-optimized.html'">
                             开始对战
                         </button>
                         <button class="bg-slate-700 hover:bg-slate-600 text-white px-8 py-4 rounded-xl font-bold transition-all duration-300 hover:transform hover:-translate-y-1">
