--- a/pokedex.html
+++ b/pokedex.html
@@ -8,170 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.0/echarts.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #0F172A;
-            overflow-x: hidden;
-        }
-        .orbitron {
-            font-family: 'Orbitron', monospace;
-        }
-        .pokedex-bg {
-            background: linear-gradient(135deg, #0F172A 0%, #1E293B 50%, #334155 100%);
-            position: relative;
-        }
-        .nav-blur {
-            backdrop-filter: blur(10px);
-            background: rgba(15, 23, 42, 0.8);
-        }
-        .pokemon-card {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-        .pokemon-card:hover {
-            border-color: #06B6D4;
-            box-shadow: 0 10px 25px rgba(6, 182, 212, 0.2);
-            transform: translateY(-5px);
-        }
-        .pokemon-card.selected {
-            border-color: #06B6D4;
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.4);
-        }
-        .type-filter {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            color: white;
-            padding: 8px 16px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-size: 14px;
-        }
-        .type-filter:hover, .type-filter.active {
-            border-color: #06B6D4;
-            box-shadow: 0 5px 15px rgba(6, 182, 212, 0.3);
-        }
-        .type-badge {
-            background: linear-gradient(135deg, #06B6D4, #0891B2);
-            color: white;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-        }
-        .type-badge.fire { background: linear-gradient(135deg, #EF4444, #DC2626); }
-        .type-badge.water { background: linear-gradient(135deg, #3B82F6, #1D4ED8); }
-        .type-badge.electric { background: linear-gradient(135deg, #F59E0B, #D97706); }
-        .type-badge.grass { background: linear-gradient(135deg, #10B981, #059669); }
-        .type-badge.psychic { background: linear-gradient(135deg, #8B5CF6, #7C3AED); }
-        .type-badge.dragon { background: linear-gradient(135deg, #6366F1, #4F46E5); }
-        .type-badge.ice { background: linear-gradient(135deg, #06B6D4, #0891B2); }
-        .type-badge.fighting { background: linear-gradient(135deg, #DC2626, #B91C1C); }
-        .type-badge.poison { background: linear-gradient(135deg, #7C3AED, #6D28D9); }
-        .type-badge.ground { background: linear-gradient(135deg, #D97706, #B45309); }
-        .type-badge.flying { background: linear-gradient(135deg, #818CF8, #6366F1); }
-        .type-badge.bug { background: linear-gradient(135deg, #10B981, #047857); }
-        .type-badge.rock { background: linear-gradient(135deg, #78716C, #57534E); }
-        .type-badge.ghost { background: linear-gradient(135deg, #3730A3, #312E81); }
-        .type-badge.dark { background: linear-gradient(135deg, #1F2937, #111827); }
-        .type-badge.steel { background: linear-gradient(135deg, #6B7280, #4B5563); }
-        .type-badge.fairy { background: linear-gradient(135deg, #EC4899, #DB2777); }
-        .type-badge.normal { background: linear-gradient(135deg, #9CA3AF, #6B7280); }
-        .stat-bar {
-            background: #1E293B;
-            border: 1px solid #475569;
-            border-radius: 10px;
-            overflow: hidden;
-            height: 8px;
-        }
-        .stat-fill {
-            height: 100%;
-            background: linear-gradient(90deg, #10B981, #059669);
-            transition: width 0.5s ease;
-        }
-        .calculator-panel {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 16px;
-            padding: 24px;
-        }
-        .type-selector {
-            background: #0F172A;
-            border: 2px solid #475569;
-            border-radius: 12px;
-            padding: 16px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-        .type-selector:hover {
-            border-color: #06B6D4;
-        }
-        .type-selector.selected {
-            border-color: #06B6D4;
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.3);
-        }
-        .multiplier-display {
-            font-size: 48px;
-            font-weight: bold;
-            text-align: center;
-            margin: 20px 0;
-        }
-        .multiplier-0 { color: #6B7280; }
-        .multiplier-05 { color: #F59E0B; }
-        .multiplier-1 { color: #10B981; }
-        .multiplier-2 { color: #3B82F6; }
-        .multiplier-4 { color: #8B5CF6; }
-        .search-box {
-            background: #1E293B;
-            border: 2px solid #475569;
-            border-radius: 12px;
-            padding: 12px 16px;
-            color: white;
-            width: 100%;
-        }
-        .search-box:focus {
-            outline: none;
-            border-color: #06B6D4;
-            box-shadow: 0 0 10px rgba(6, 182, 212, 0.3);
-        }
-        .modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease;
-        }
-        .modal.active {
-            opacity: 1;
-            visibility: visible;
-        }
-        .modal-content {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 16px;
-            padding: 32px;
-            max-width: 500px;
-            width: 90%;
-            max-height: 80vh;
-            overflow-y: auto;
-            transform: scale(0.8);
-            transition: transform 0.3s ease;
-        }
-        .modal.active .modal-content {
-            transform: scale(1);
-        }
-    </style>
+    <link rel="stylesheet" href="styles/pokedex.css">
 </head>
 <body class="bg-slate-900 text-white">
     <!-- 导航栏 -->
@@ -186,7 +23,7 @@
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-white hover:text-cyan-300 transition-colors font-medium">首页</a>
-                    <a href="battle.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
+                    <a href="battle-optimized.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
                     <a href="pokedex.html" class="text-cyan-400 hover:text-cyan-300 transition-colors font-medium">宝可梦图鉴</a>
                     <a href="trainer.html" class="text-white hover:text-cyan-300 transition-colors font-medium">训练师档案</a>
                 </div>
