--- a/trainer.html
+++ b/trainer.html
@@ -8,156 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.0/echarts.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: #0F172A;
-            overflow-x: hidden;
-        }
-        .orbitron {
-            font-family: 'Orbitron', monospace;
-        }
-        .trainer-bg {
-            background: linear-gradient(135deg, #0F172A 0%, #1E293B 50%, #334155 100%);
-            position: relative;
-        }
-        .nav-blur {
-            backdrop-filter: blur(10px);
-            background: rgba(15, 23, 42, 0.8);
-        }
-        .profile-card {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 20px;
-            padding: 32px;
-            position: relative;
-            overflow: hidden;
-        }
-        .profile-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('resources/trainer-dashboard.png') center/cover;
-            opacity: 0.1;
-            z-index: 0;
-        }
-        .profile-content {
-            position: relative;
-            z-index: 1;
-        }
-        .stat-card {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 16px;
-            padding: 24px;
-            transition: all 0.3s ease;
-        }
-        .stat-card:hover {
-            border-color: #06B6D4;
-            box-shadow: 0 10px 25px rgba(6, 182, 212, 0.2);
-            transform: translateY(-5px);
-        }
-        .achievement-badge {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 12px;
-            padding: 16px;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-        .achievement-badge.unlocked {
-            border-color: #06B6D4;
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.3);
-        }
-        .achievement-badge.locked {
-            opacity: 0.5;
-            filter: grayscale(1);
-        }
-        .level-progress {
-            background: #1E293B;
-            border: 2px solid #475569;
-            border-radius: 20px;
-            overflow: hidden;
-            height: 20px;
-            position: relative;
-        }
-        .level-fill {
-            height: 100%;
-            background: linear-gradient(90deg, #06B6D4, #0891B2);
-            transition: width 0.5s ease;
-            position: relative;
-        }
-        .level-fill::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
-            animation: shimmer 2s infinite;
-        }
-        @keyframes shimmer {
-            0% { transform: translateX(-100%); }
-            100% { transform: translateX(100%); }
-        }
-        .team-slot {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px dashed #475569;
-            border-radius: 16px;
-            padding: 20px;
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            min-height: 120px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        .team-slot:hover {
-            border-color: #06B6D4;
-            background: rgba(6, 182, 212, 0.1);
-        }
-        .team-slot.filled {
-            border-style: solid;
-            border-color: #06B6D4;
-            background: linear-gradient(135deg, rgba(6, 182, 212, 0.1), rgba(139, 92, 246, 0.1));
-        }
-        .rank-badge {
-            background: linear-gradient(135deg, #F59E0B, #D97706);
-            color: white;
-            padding: 8px 16px;
-            border-radius: 20px;
-            font-weight: bold;
-            display: inline-block;
-        }
-        .battle-history-item {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 1px solid #475569;
-            border-radius: 12px;
-            padding: 16px;
-            margin-bottom: 12px;
-        }
-        .win-indicator {
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 8px;
-        }
-        .win-indicator.win { background: #10B981; }
-        .win-indicator.lose { background: #EF4444; }
-        .chart-container {
-            background: linear-gradient(135deg, #1E293B, #334155);
-            border: 2px solid #475569;
-            border-radius: 16px;
-            padding: 24px;
-            height: 400px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/trainer.css">
 </head>
 <body class="bg-slate-900 text-white">
     <!-- 导航栏 -->
@@ -172,7 +23,7 @@
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-white hover:text-cyan-300 transition-colors font-medium">首页</a>
-                    <a href="battle.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
+                    <a href="battle-optimized.html" class="text-white hover:text-cyan-300 transition-colors font-medium">对战模拟器</a>
                     <a href="pokedex.html" class="text-white hover:text-cyan-300 transition-colors font-medium">宝可梦图鉴</a>
                     <a href="trainer.html" class="text-cyan-400 hover:text-cyan-300 transition-colors font-medium">训练师档案</a>
                 </div>
@@ -189,36 +40,37 @@
                 <p class="text-xl text-slate-300">查看你的对战记录和成就，成为最强训练师</p>
             </div>
 
-            <!-- 个人信息卡片 -->
+            <!-- 个人信息卡片（可编辑） -->
             <div class="profile-card mb-8">
                 <div class="profile-content">
                     <div class="flex flex-col md:flex-row items-center gap-8">
                         <div class="text-center md:text-left">
-                            <div class="w-24 h-24 bg-gradient-to-r from-cyan-500 to-purple-600 rounded-full mx-auto md:mx-0 mb-4 flex items-center justify-center">
-                                <span class="text-4xl">👨‍💻</span>
-                            </div>
-                            <div class="rank-badge mb-2">钻石训练师</div>
+                            <div id="trainer-avatar" class="w-24 h-24 bg-gradient-to-r from-cyan-500 to-purple-600 rounded-full mx-auto md:mx-0 mb-4 flex items-center justify-center text-4xl">👨‍💻</div>
+                            <div id="trainer-rank" class="rank-badge mb-2">钻石训练师</div>
                         </div>
                         
                         <div class="flex-1 text-center md:text-left">
-                            <h2 class="orbitron font-bold text-3xl text-white mb-2">训练师小明</h2>
-                            <p class="text-slate-300 mb-4">来自真新镇的宝可梦训练师</p>
+                            <div class="flex items-center gap-4 justify-center md:justify-start">
+                                <h2 id="trainer-name" class="orbitron font-bold text-3xl text-white mb-2">训练师小明</h2>
+                                <button id="edit-profile-btn" class="text-xs bg-slate-700 hover:bg-slate-600 px-3 py-1 rounded">编辑档案</button>
+                            </div>
+                            <p id="trainer-location" class="text-slate-300 mb-4">来自真新镇的宝可梦训练师</p>
                             
                             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
                                 <div class="bg-slate-800 rounded-lg p-3">
-                                    <div class="text-2xl font-bold text-cyan-400">42</div>
+                                    <div id="stat-level" class="text-2xl font-bold text-cyan-400">42</div>
                                     <div class="text-sm text-slate-400">等级</div>
                                 </div>
                                 <div class="bg-slate-800 rounded-lg p-3">
-                                    <div class="text-2xl font-bold text-green-400">1,247</div>
+                                    <div id="stat-wins" class="text-2xl font-bold text-green-400">1,247</div>
                                     <div class="text-sm text-slate-400">胜场</div>
                                 </div>
                                 <div class="bg-slate-800 rounded-lg p-3">
-                                    <div class="text-2xl font-bold text-red-400">386</div>
+                                    <div id="stat-losses" class="text-2xl font-bold text-red-400">386</div>
                                     <div class="text-sm text-slate-400">败场</div>
                                 </div>
                                 <div class="bg-slate-800 rounded-lg p-3">
-                                    <div class="text-2xl font-bold text-yellow-400">76.4%</div>
+                                    <div id="stat-winrate" class="text-2xl font-bold text-yellow-400">76.4%</div>
                                     <div class="text-sm text-slate-400">胜率</div>
                                 </div>
                             </div>
@@ -228,11 +80,11 @@
                     <!-- 等级进度条 -->
                     <div class="mt-6">
                         <div class="flex justify-between text-sm text-slate-300 mb-2">
-                            <span>等级进度 (42 → 43)</span>
-                            <span>8,450 / 10,000 EXP</span>
+                            <span id="level-progress-label">等级进度 (42 → 43)</span>
+                            <span id="level-exp-label">8,450 / 10,000 EXP</span>
                         </div>
                         <div class="level-progress">
-                            <div class="level-fill" style="width: 84.5%"></div>
+                            <div id="level-fill" class="level-fill" style="width: 84.5%"></div>
                         </div>
                     </div>
                 </div>
