feat: 增强战斗界面的信息展示功能
- 添加宝可梦携带道具显示（如阿尔宙斯的石板）
- 为所有技能添加描述文本和悬停提示框
- 在战斗日志中显示属性相克效果提示（效果拔群/效果不佳/没有效果）

--- a/battle-optimized.html
+++ b/battle-optimized.html
@@ -76,6 +76,10 @@
                                     <div class="health-fill bg-green-500 h-full rounded" style="width: 0%"></div>
                                 </div>
                                 <div class="text-xs text-slate-400 mt-1 poke-hp">HP: 0/0</div>
+                                <div class="text-xs text-amber-400 mt-1 poke-item" style="display: none;">
+                                    <span class="inline-block">📦</span>
+                                    <span class="item-name"></span>
+                                </div>
                             </div>
 
                             <!-- VS 标识 -->
@@ -95,6 +99,10 @@
                                     <div class="health-fill bg-green-500 h-full rounded" style="width: 0%"></div>
                                 </div>
                                 <div class="text-xs text-slate-400 mt-1 poke-hp">HP: 0/0</div>
+                                <div class="text-xs text-amber-400 mt-1 poke-item" style="display: none;">
+                                    <span class="inline-block">📦</span>
+                                    <span class="item-name"></span>
+                                </div>
                             </div>
                         </div>
                     </div>
