--- a/battle-optimized.html
+++ b/battle-optimized.html
@@ -319,11 +319,18 @@
     <script src="data/pokemon.js"></script>
     <script src="data/types.js"></script>
 
-    <!-- 2. 加载核心系统 -->
+    <!-- 2. 加载战斗模块 -->
+    <script src="systems/battle/DamageCalculator.js"></script>
+    <script src="systems/battle/TypeEffectiveness.js"></script>
+    <script src="systems/battle/StatusEffectManager.js"></script>
+    <script src="systems/battle/ActionExecutor.js"></script>
+    <script src="systems/battle/BattlePhaseHandler.js"></script>
+
+    <!-- 3. 加载核心系统 -->
     <script src="systems/core/EventBus.js"></script>
     <script src="systems/core/MicroTurnScheduler.js"></script>
 
-    <!-- 3. 加载主逻辑 -->
+    <!-- 4. 加载主逻辑 -->
     <script src="battle-enhanced-micro.js"></script>
 </body>
 </html>
